Fixed search .tag spacing issue.

--- a/client/styles/Tag.styl
+++ b/client/styles/Tag.styl
@@ -10,8 +10,14 @@
     font-family: 'Quicksand', sans-serif;
     background: #7f2ccb;
     margin: 10px;
-    padding: 5px 10px;
-		transform: scale(1.15);
+    padding: 7px 10px;
 		box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    img {
+      width: 18px;
+      height: 18px;
+      transform: rotate(45deg);
+      margin-left: 5px;
+    }
   }
+
 }
